test/files/neg/bug648.check
bug648.scala:7: error: value newAcc escapes its defining scope as part of type newAcc.type
      List[Symbol]() map { sym =>
                               ^
one error found
